src/core/Claroline/CoreBundle/Tests/Stub/plugin/Invalid/UnloadableParentResource1/InvalidUnloadableParentResource1.php
<?php

namespace Invalid\UnloadableParentResource1;

use Claroline\CoreBundle\Library\PluginBundle;

class InvalidUnloadableParentResource1 extends PluginBundle
{
}